# aws-mfa

./: .gitignore  README.md  pyproject.toml  renovate.json  tasks.py
.github/workflows/: test_and_lint.yaml
aws_mfa/: aws_credentials.py  main.py
src/: aws_credentials.py  constants.py  exceptions.py  main.py  test
tests/: test_aws_credentials.py
tests/data/: aws_credentials
