[tool.poetry]
name = "aws-mfa"
version = "0.2.0"
description = "AWS MFA CLI tool"
authors = ["Ryan Faircloth <ryan.faircloth@properly.ca>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9 <3.11"
boto3 = "1.*"
click = "^8.1.3"

[tool.poetry.scripts]
aws-mfa='src.main:main'

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
moto = {extras = ["iam", "sts"], version = "^4.1.0"}
pytest = "^7.2.0"
freezegun = "^1.2.2"
pytest-mock = "^3.10.0"
isort = "^5.11.4"
ssort = "^0.11.6"
mypy = "^0.991"
invoke = "^1.7.3"
properly-util-python-private = "^2.4.1"


[[tool.poetry.source]]
name = "properly"
url = "https://pypi.fury.io/properly/"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
