[tool.poetry]
name = "aws-mfa"
version = "0.5.2"
description = "AWS MFA CLI tool"
authors = ["Ryan Faircloth <ryan@faircloth.ca>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.7 <3.11"
boto3 = "1.*"
click = "^8.1.3"
importlib-metadata = ">=4.4 <5.0"

[tool.poetry.scripts]
aws-mfa='src.main:main'

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
moto = {extras = ["iam", "sts"], version = "^4.1.0"}
pytest = "^7.2.0"
freezegun = "^1.2.2"
pytest-mock = "^3.10.0"
isort = "^5.11.4"
mypy = "^0.991"
invoke = "^1.7.3"
ssort = { version = "^0.11.6", python = ">=3.8" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
